--- a/src/components/menu.scss
+++ b/src/components/menu.scss
@@ -1,52 +1,71 @@
-// TreeView.scss
+/* TreeView.scss */
 
-/* Container for the entire tree view */
 .tree-view {
-    display: flex;
-    flex-direction: column;
-  
-    /* Styling for each tree node */
-    .tree-node {
-      margin-left: 10px;
-  
-      /* Styling for the label of each node */
-      .node-label {
-        display: flex;
-        align-items: center;
-        cursor: pointer;
-  
-        /* Styling for the toggle icon (arrow) */
-        .toggle-icon {
-          width: 10px;
-          height: 10px;
-          margin-right: 5px;
-          border: 1px solid #ccc;
-          border-radius: 50%;
-  
-          /* Additional styling when the toggle icon is in the 'open' state */
-          &.open {
-            transform: rotate(90deg);
-          }
+  display: flex;
+  flex-direction: column;
+
+  .tree-node {
+    margin-left: 10px;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+    background-color: #f9f9f9; /* Light background color for tree nodes */
+
+    &:hover {
+      background-color: #e6e6e6; /* Slightly darker background on hover */
+    }
+
+    .node-label {
+      display: flex;
+      align-items: center;
+      cursor: pointer;
+      padding: 8px;
+      border-radius: 5px;
+
+      .toggle-icon {
+        width: 12px;
+        height: 12px;
+        margin-right: 8px;
+        border: 1px solid #555;
+        border-radius: 50%;
+        transition: transform 0.3s ease;
+
+        &.open {
+          transform: rotate(90deg);
         }
       }
+
+      &:hover {
+        background-color: #dcdcdc; /* Slightly darker background on hover */
+      }
     }
-  
-    /* Margin for the children nodes to create indentation */
+
     .node-children {
       margin-left: 20px;
     }
-  
-    /* Styling for the context menu */
-    .context-menu {
-      position: absolute;
-      background-color: #fff;
-      border: 1px solid #ccc;
-      padding: 5px;
-      box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
-  
-      /* Ensure the context menu appears above other elements */
-      z-index: 1000;
-      /* Add any other necessary styles */
+  }
+
+  .context-menu {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    padding: 8px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+    border-radius: 5px;
+
+    ul {
+      list-style: none;
+      padding: 0;
+
+      li {
+        padding: 5px 0;
+        cursor: pointer;
+
+        &:hover {
+          background-color: #f0f0f0;
+        }
+      }
     }
   }
-  
+}
