--- a/src/components/menu.scss
+++ b/src/components/menu.scss
@@ -50,19 +50,24 @@
     display: flex;
     flex-direction: column;
     position: absolute;
-    background-color: #fff;
-    border: 1px solid #ccc;
-    padding: 8px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
-    border-radius: 5px;
+    background-color: #ffffff;
+    border: 1px solid #e1e1e1;
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.2);
+    border-radius: 8px;
+    width: 150px; /* Adjust width as needed */
+    z-index: 1;
 
     ul {
       list-style: none;
       padding: 0;
+      margin: 0;
+      display: flex;
+      flex-direction: column;
 
       li {
-        padding: 5px 0;
+        padding: 10px;
         cursor: pointer;
+        transition: background-color 0.3s;
 
         &:hover {
           background-color: #f0f0f0;
